Session-labs/k8s-examples/examples/deployments/rolling-update-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-rolling-update
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19
        ports:
        - containerPort: 80
